--- a/codes.ipynb
+++ b/codes.ipynb
@@ -2647,13 +2647,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Since it's a sorted series we can just get the first series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "youth_marketing_channels = df_youth_marketing_channels['Marketing_channels'].value_counts().index[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Online ads'"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "youth_marketing_channels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The type of marketing reaches the most Youth (15-30) is:  Online ads\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The type of marketing reaches the most Youth (15-30) is: \", youth_marketing_channels)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "youth_marketing_channels"
-   ]
+   "source": []
   }
  ],
  "metadata": {
