--- a/codes.ipynb
+++ b/codes.ipynb
@@ -2700,6 +2700,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Consumer Preferences:\n",
+    "## Let's find out about the preferred ingredients of energy drinks among respondents"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
