--- a/codes.ipynb
+++ b/codes.ipynb
@@ -2991,6 +2991,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's find out what packaging preferences do respondents have for energy drinks?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Respondent_ID', 'Name', 'Age', 'Gender', 'City_ID', 'City', 'Tier',\n",
+       "       'Response_ID', 'Consume_frequency', 'Consume_time', 'Consume_reason',\n",
+       "       'Heard_before', 'Brand_perception', 'General_perception',\n",
+       "       'Tried_before', 'Taste_experience', 'Reasons_preventing_trying',\n",
+       "       'Current_brands', 'Reasons_for_choosing_brands', 'Improvements_desired',\n",
+       "       'Ingredients_expected', 'Health_concerns',\n",
+       "       'Interest_in_natural_or_organic', 'Marketing_channels',\n",
+       "       'Packaging_preference', 'Limited_edition_packaging', 'Price_range',\n",
+       "       'Purchase_location', 'Typical_consumption_situations'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
