--- a/codes.ipynb
+++ b/codes.ipynb
@@ -3075,8 +3075,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## creating a function to see the actual values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values = df['Ingredients_expected'].value_counts()\n",
+    "def func(pct, allvalues):\n",
+    "    absolute = int(pct / 100. * sum(allvalues))\n",
+    "    return f'{absolute}\\n({pct:.1f}%)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -3091,15 +3110,7 @@
     }
    ],
    "source": [
-    "sns.set(style=\"whitegrid\")\n",
-    "# creating a function to see the actual values\n",
-    "def func(pct, allvalues):\n",
-    "    absolute = int(pct / 100. * sum(allvalues))\n",
-    "    return f'{absolute}\\n({pct:.1f}%)'\n",
-    "\n",
-    "# Create the pie chart\n",
-    "values = df['Ingredients_expected'].value_counts()\n",
-    "plt.figure(figsize=(5, 5))  # Optional: to adjust the figure size\n",
+    "plt.figure(figsize=(5, 5))\n",
     "plt.pie(values, autopct=lambda pct: func(pct, values), labels=values.index)\n",
     "plt.show()"
    ]
