--- a/codes.ipynb
+++ b/codes.ipynb
@@ -3175,6 +3175,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## To find out the primary reasons consumers prefer those brands over ours?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Reasons_for_choosing_brands\n",
+       "Brand reputation           2652\n",
+       "Taste/flavor preference    2011\n",
+       "Availability               1910\n",
+       "Effectiveness              1748\n",
+       "Other                      1679\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Reasons_for_choosing_brands'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primary_reasons = df['Reasons_for_choosing_brands'].value_counts().index[:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The primary reasons consumers prefer those brands over ours are: \n",
+      "Brand reputation\n",
+      "Taste/flavor preference\n",
+      "Availability\n",
+      "Effectiveness\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The primary reasons consumers prefer those brands over ours are: ')\n",
+    "for i in primary_reasons:\n",
+    "    print(i)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
