--- a/codes.ipynb
+++ b/codes.ipynb
@@ -3240,6 +3240,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Marketing Channels and Brand Awareness:\n",
+    "## Find out what marketing channel can be used to reach more customers? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Marketing_channels\n",
+       "Online ads            4020\n",
+       "TV commercials        2688\n",
+       "Outdoor billboards    1226\n",
+       "Other                 1225\n",
+       "Print media            841\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Marketing_channels'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
