--- a/codes.ipynb
+++ b/codes.ipynb
@@ -3275,6 +3275,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "most_reached_marketing_channels = df['Marketing_channels'].value_counts().index[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marketing chennel that is most useful to reach more cutomers is:  Online ads\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Marketing chennel that is most useful to reach more cutomers is: ',most_reached_marketing_channels)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
