--- a/codes.ipynb
+++ b/codes.ipynb
@@ -3339,7 +3339,36 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Brand Penetration:\n",
+    "## What do people think about our brand? (overall rating)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Taste_experience\n",
+       "3    2957\n",
+       "4    2479\n",
+       "5    1986\n",
+       "2    1524\n",
+       "1    1054\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Taste_experience'].value_counts()"
+   ]
   },
   {
    "cell_type": "code",
