--- a/codes.ipynb
+++ b/codes.ipynb
@@ -3409,6 +3409,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## To get the overall rating"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 137,
    "metadata": {},
