--- a/codes.ipynb
+++ b/codes.ipynb
@@ -3703,6 +3703,278 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights2 = {'Daily': 30, '2-3 times a week': 12, 'Once a week': 4, '2-3 times a month': 3,'Rarely': 1}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Consume_weights'] = df['Consume_frequency'].map(weights2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Respondent_ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Tier</th>\n",
+       "      <th>Response_ID</th>\n",
+       "      <th>Consume_frequency</th>\n",
+       "      <th>Consume_time</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Ingredients_expected</th>\n",
+       "      <th>Health_concerns</th>\n",
+       "      <th>Interest_in_natural_or_organic</th>\n",
+       "      <th>Marketing_channels</th>\n",
+       "      <th>Packaging_preference</th>\n",
+       "      <th>Limited_edition_packaging</th>\n",
+       "      <th>Price_range</th>\n",
+       "      <th>Purchase_location</th>\n",
+       "      <th>Typical_consumption_situations</th>\n",
+       "      <th>Consume_weights</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>120031</td>\n",
+       "      <td>Aniruddh Issac</td>\n",
+       "      <td>15-18</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>CT117</td>\n",
+       "      <td>Ahmedabad</td>\n",
+       "      <td>Tier 2</td>\n",
+       "      <td>103001</td>\n",
+       "      <td>2-3 times a week</td>\n",
+       "      <td>To stay awake during work/study</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Guarana</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>TV commercials</td>\n",
+       "      <td>Compact and portable cans</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>50-99</td>\n",
+       "      <td>Supermarkets</td>\n",
+       "      <td>Studying/working late</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>120032</td>\n",
+       "      <td>Trisha Rout</td>\n",
+       "      <td>19-30</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>CT118</td>\n",
+       "      <td>Pune</td>\n",
+       "      <td>Tier 2</td>\n",
+       "      <td>103002</td>\n",
+       "      <td>2-3 times a month</td>\n",
+       "      <td>Throughout the day</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Caffeine</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Not Sure</td>\n",
+       "      <td>Print media</td>\n",
+       "      <td>Compact and portable cans</td>\n",
+       "      <td>No</td>\n",
+       "      <td>50-99</td>\n",
+       "      <td>Supermarkets</td>\n",
+       "      <td>Sports/exercise</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>120033</td>\n",
+       "      <td>Yuvraj  Virk</td>\n",
+       "      <td>15-18</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>CT116</td>\n",
+       "      <td>Hyderabad</td>\n",
+       "      <td>Tier 1</td>\n",
+       "      <td>103003</td>\n",
+       "      <td>Rarely</td>\n",
+       "      <td>Before exercise</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Caffeine</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Online ads</td>\n",
+       "      <td>Innovative bottle design</td>\n",
+       "      <td>Not Sure</td>\n",
+       "      <td>100-150</td>\n",
+       "      <td>Supermarkets</td>\n",
+       "      <td>Studying/working late</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>120034</td>\n",
+       "      <td>Pranay Chand</td>\n",
+       "      <td>31-45</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>CT113</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Tier 1</td>\n",
+       "      <td>103004</td>\n",
+       "      <td>2-3 times a week</td>\n",
+       "      <td>To stay awake during work/study</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Caffeine</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Online ads</td>\n",
+       "      <td>Compact and portable cans</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Above 150</td>\n",
+       "      <td>Supermarkets</td>\n",
+       "      <td>Sports/exercise</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>120035</td>\n",
+       "      <td>Mohanlal Joshi</td>\n",
+       "      <td>19-30</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>CT120</td>\n",
+       "      <td>Lucknow</td>\n",
+       "      <td>Tier 2</td>\n",
+       "      <td>103005</td>\n",
+       "      <td>Daily</td>\n",
+       "      <td>To stay awake during work/study</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Caffeine</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Online ads</td>\n",
+       "      <td>Compact and portable cans</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>100-150</td>\n",
+       "      <td>Online retailers</td>\n",
+       "      <td>Studying/working late</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Respondent_ID            Name    Age  Gender City_ID       City    Tier  \\\n",
+       "0         120031  Aniruddh Issac  15-18  Female   CT117  Ahmedabad  Tier 2   \n",
+       "1         120032     Trisha Rout  19-30    Male   CT118       Pune  Tier 2   \n",
+       "2         120033    Yuvraj  Virk  15-18    Male   CT116  Hyderabad  Tier 1   \n",
+       "3         120034    Pranay Chand  31-45  Female   CT113  Bangalore  Tier 1   \n",
+       "4         120035  Mohanlal Joshi  19-30  Female   CT120    Lucknow  Tier 2   \n",
+       "\n",
+       "   Response_ID  Consume_frequency                     Consume_time  ...  \\\n",
+       "0       103001   2-3 times a week  To stay awake during work/study  ...   \n",
+       "1       103002  2-3 times a month               Throughout the day  ...   \n",
+       "2       103003             Rarely                  Before exercise  ...   \n",
+       "3       103004   2-3 times a week  To stay awake during work/study  ...   \n",
+       "4       103005              Daily  To stay awake during work/study  ...   \n",
+       "\n",
+       "  Ingredients_expected Health_concerns Interest_in_natural_or_organic  \\\n",
+       "0              Guarana              No                            Yes   \n",
+       "1             Caffeine             Yes                       Not Sure   \n",
+       "2             Caffeine              No                            Yes   \n",
+       "3             Caffeine              No                            Yes   \n",
+       "4             Caffeine             Yes                            Yes   \n",
+       "\n",
+       "  Marketing_channels       Packaging_preference  Limited_edition_packaging  \\\n",
+       "0     TV commercials  Compact and portable cans                        Yes   \n",
+       "1        Print media  Compact and portable cans                         No   \n",
+       "2         Online ads   Innovative bottle design                   Not Sure   \n",
+       "3         Online ads  Compact and portable cans                         No   \n",
+       "4         Online ads  Compact and portable cans                        Yes   \n",
+       "\n",
+       "  Price_range Purchase_location Typical_consumption_situations Consume_weights  \n",
+       "0       50-99      Supermarkets          Studying/working late              12  \n",
+       "1       50-99      Supermarkets                Sports/exercise               3  \n",
+       "2     100-150      Supermarkets          Studying/working late               1  \n",
+       "3   Above 150      Supermarkets                Sports/exercise              12  \n",
+       "4     100-150  Online retailers          Studying/working late              30  \n",
+       "\n",
+       "[5 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City\n",
+       "Lucknow       1722\n",
+       "Ahmedabad     2676\n",
+       "Kolkata       3189\n",
+       "Jaipur        4197\n",
+       "Delhi         6132\n",
+       "Pune          8929\n",
+       "Hyderabad    10653\n",
+       "Chennai      13572\n",
+       "Mumbai       15140\n",
+       "Bangalore    29278\n",
+       "Name: Consume_weights, dtype: int64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('City')['Consume_weights'].sum().sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
