--- a/codes.ipynb
+++ b/codes.ipynb
@@ -3703,25 +3703,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "weights2 = {'Daily': 30, '2-3 times a week': 12, 'Once a week': 4, '2-3 times a month': 3,'Rarely': 1}"
+    "Consumption_weights = {'Daily': 30, '2-3 times a week': 12, 'Once a week': 4, '2-3 times a month': 3,'Rarely': 1}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Consume_weights'] = df['Consume_frequency'].map(weights2)"
+    "df['Consume_weights'] = df['Consume_frequency'].map(Consumption_weights)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -3933,7 +3933,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3944,33 +3944,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "City\n",
-       "Lucknow       1722\n",
-       "Ahmedabad     2676\n",
-       "Kolkata       3189\n",
-       "Jaipur        4197\n",
-       "Delhi         6132\n",
-       "Pune          8929\n",
-       "Hyderabad    10653\n",
-       "Chennai      13572\n",
-       "Mumbai       15140\n",
-       "Bangalore    29278\n",
-       "Name: Consume_weights, dtype: int64"
+       "Kolkata       5.634276\n",
+       "Hyderabad     5.811784\n",
+       "Ahmedabad     5.868421\n",
+       "Lucknow       9.840000\n",
+       "Pune          9.855408\n",
+       "Mumbai       10.026490\n",
+       "Bangalore    10.352900\n",
+       "Jaipur       11.658333\n",
+       "Delhi        14.293706\n",
+       "Chennai      14.484525\n",
+       "Name: Consume_weights, dtype: float64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby('City')['Consume_weights'].sum().sort_values()"
+    "df.groupby('City')['Consume_weights'].mean().sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import pandas as pd\n",
+    "\n",
+    "# # Assuming df is your DataFrame\n",
+    "# # Load your DataFrame here\n",
+    "# # df = pd.read_csv('your_dataframe.csv')\n",
+    "\n",
+    "# # Define the perception mapping for numerical analysis\n",
+    "# perception_mapping = {\n",
+    "#     'Positive': 3,\n",
+    "#     'Neutral': 2,\n",
+    "#     'Negative': 1\n",
+    "# }\n",
+    "\n",
+    "# # Map the Brand_perception column to numerical values\n",
+    "# df['Brand_perception_numeric'] = df['Brand_perception'].map(perception_mapping)\n",
+    "\n",
+    "# # Group by city and calculate the average brand perception and consumption frequency\n",
+    "# city_focus = df.groupby('City').agg({\n",
+    "#     'Brand_perception_numeric': 'mean',\n",
+    "#     'Consume_frequency': 'value_counts'  # This gives you frequency distribution by city\n",
+    "# })\n",
+    "\n",
+    "# # Sort by brand perception to identify cities with lower scores\n",
+    "# city_focus_sorted = city_focus.sort_values('Brand_perception_numeric')\n",
+    "\n",
+    "# # Output the cities that need focus\n",
+    "# print(\"Cities that need more focus based on brand perception:\")\n",
+    "# print(city_focus_sorted)\n",
+    "\n",
+    "# # Additionally, if you want to focus on cities where consumption is low\n",
+    "# # Filter cities with lower average perception and lower consumption frequency\n",
+    "\n",
+    "# # Adjust the threshold as per your requirement\n",
+    "# threshold_perception = 2  # Neutral\n",
+    "# threshold_consumption = df['Consume_frequency'].map(weights).mean()  # Average consumption score\n",
+    "\n",
+    "# low_perception_cities = df[df['Brand_perception_numeric'] <= threshold_perception]\n",
+    "# low_consumption_cities = df[df['Consume_frequency'].map(weights) <= threshold_consumption]\n",
+    "\n",
+    "# # Combining the filters to find cities needing more focus\n",
+    "# cities_needing_focus = low_perception_cities.merge(low_consumption_cities, on='City', how='inner')['City'].unique()\n",
+    "\n",
+    "# print(\"Cities that need more focus based on both low brand perception and low consumption frequency:\")\n",
+    "# print(cities_needing_focus)\n"
    ]
   },
   {
