--- a/codes.ipynb
+++ b/codes.ipynb
@@ -4925,6 +4925,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How some factors influence respondents' purchase decisions, such as price range and limited edition packaging?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Limited_edition_packaging\n",
+       "No          4023\n",
+       "Yes         3946\n",
+       "Not Sure    2031\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Limited_edition_packaging'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
