--- a/codes.ipynb
+++ b/codes.ipynb
@@ -5016,6 +5016,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Product Development\n",
+    "## Which area of business should we focus more on our product development? (Branding/taste/availability)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
