--- a/codes.ipynb
+++ b/codes.ipynb
@@ -5025,10 +5025,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Respondent_ID', 'Name', 'Age', 'Gender', 'City_ID', 'City', 'Tier',\n",
+       "       'Response_ID', 'Consume_frequency', 'Consume_time', 'Consume_reason',\n",
+       "       'Heard_before', 'Brand_perception', 'General_perception',\n",
+       "       'Tried_before', 'Taste_experience', 'Reasons_preventing_trying',\n",
+       "       'Current_brands', 'Reasons_for_choosing_brands', 'Improvements_desired',\n",
+       "       'Ingredients_expected', 'Health_concerns',\n",
+       "       'Interest_in_natural_or_organic', 'Marketing_channels',\n",
+       "       'Packaging_preference', 'Limited_edition_packaging', 'Price_range',\n",
+       "       'Purchase_location', 'Typical_consumption_situations',\n",
+       "       'Consume_weights', 'Brand_perception_weights'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'Taste_experience','Brand_perception','Reasons_for_choosing_brands'"
+   ]
   }
  ],
  "metadata": {
