--- a/codes.ipynb
+++ b/codes.ipynb
@@ -5024,33 +5024,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### According to the brand perception of consumers we need to focus more on the customers those are neutral about our brand, things like how to convert their neutral perception to a positive"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Respondent_ID', 'Name', 'Age', 'Gender', 'City_ID', 'City', 'Tier',\n",
-       "       'Response_ID', 'Consume_frequency', 'Consume_time', 'Consume_reason',\n",
-       "       'Heard_before', 'Brand_perception', 'General_perception',\n",
-       "       'Tried_before', 'Taste_experience', 'Reasons_preventing_trying',\n",
-       "       'Current_brands', 'Reasons_for_choosing_brands', 'Improvements_desired',\n",
-       "       'Ingredients_expected', 'Health_concerns',\n",
-       "       'Interest_in_natural_or_organic', 'Marketing_channels',\n",
-       "       'Packaging_preference', 'Limited_edition_packaging', 'Price_range',\n",
-       "       'Purchase_location', 'Typical_consumption_situations',\n",
-       "       'Consume_weights', 'Brand_perception_weights'],\n",
-       "      dtype='object')"
+       "Brand_perception\n",
+       "Neutral     5974\n",
+       "Positive    2257\n",
+       "Negative    1769\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.columns"
+    "df['Brand_perception'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Taste_experience\n",
+       "3    2957\n",
+       "4    2479\n",
+       "5    1986\n",
+       "2    1524\n",
+       "1    1054\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Taste_experience'].value_counts()"
    ]
   },
   {
