--- a/codes.ipynb
+++ b/codes.ipynb
@@ -5055,29 +5055,236 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Focus more on how to increase the overall rating for the test of our product"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Taste_experience\n",
-       "3    2957\n",
-       "4    2479\n",
-       "5    1986\n",
-       "2    1524\n",
-       "1    1054\n",
-       "Name: count, dtype: int64"
+       "3.2819"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Taste_experience'].value_counts()"
+    "df['Taste_experience'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Reasons_for_choosing_brands\n",
+       "Brand reputation           2652\n",
+       "Taste/flavor preference    2011\n",
+       "Availability               1910\n",
+       "Effectiveness              1748\n",
+       "Other                      1679\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Reasons_for_choosing_brands'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>40</th>\n",
+       "      <th>41</th>\n",
+       "      <th>42</th>\n",
+       "      <th>43</th>\n",
+       "      <th>44</th>\n",
+       "      <th>45</th>\n",
+       "      <th>46</th>\n",
+       "      <th>47</th>\n",
+       "      <th>48</th>\n",
+       "      <th>49</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>City</th>\n",
+       "      <td>Ahmedabad</td>\n",
+       "      <td>Ahmedabad</td>\n",
+       "      <td>Ahmedabad</td>\n",
+       "      <td>Ahmedabad</td>\n",
+       "      <td>Ahmedabad</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Mumbai</td>\n",
+       "      <td>Mumbai</td>\n",
+       "      <td>Mumbai</td>\n",
+       "      <td>Mumbai</td>\n",
+       "      <td>Mumbai</td>\n",
+       "      <td>Pune</td>\n",
+       "      <td>Pune</td>\n",
+       "      <td>Pune</td>\n",
+       "      <td>Pune</td>\n",
+       "      <td>Pune</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Reasons_for_choosing_brands</th>\n",
+       "      <td>Brand reputation</td>\n",
+       "      <td>Taste/flavor preference</td>\n",
+       "      <td>Effectiveness</td>\n",
+       "      <td>Availability</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Brand reputation</td>\n",
+       "      <td>Availability</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Taste/flavor preference</td>\n",
+       "      <td>Effectiveness</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Brand reputation</td>\n",
+       "      <td>Taste/flavor preference</td>\n",
+       "      <td>Effectiveness</td>\n",
+       "      <td>Availability</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Brand reputation</td>\n",
+       "      <td>Taste/flavor preference</td>\n",
+       "      <td>Effectiveness</td>\n",
+       "      <td>Availability</td>\n",
+       "      <td>Other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>135</td>\n",
+       "      <td>119</td>\n",
+       "      <td>92</td>\n",
+       "      <td>68</td>\n",
+       "      <td>42</td>\n",
+       "      <td>679</td>\n",
+       "      <td>646</td>\n",
+       "      <td>570</td>\n",
+       "      <td>531</td>\n",
+       "      <td>402</td>\n",
+       "      <td>...</td>\n",
+       "      <td>443</td>\n",
+       "      <td>362</td>\n",
+       "      <td>331</td>\n",
+       "      <td>200</td>\n",
+       "      <td>174</td>\n",
+       "      <td>264</td>\n",
+       "      <td>209</td>\n",
+       "      <td>174</td>\n",
+       "      <td>157</td>\n",
+       "      <td>102</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 50 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           0                        1   \\\n",
+       "City                                Ahmedabad                Ahmedabad   \n",
+       "Reasons_for_choosing_brands  Brand reputation  Taste/flavor preference   \n",
+       "count                                     135                      119   \n",
+       "\n",
+       "                                        2             3          4   \\\n",
+       "City                             Ahmedabad     Ahmedabad  Ahmedabad   \n",
+       "Reasons_for_choosing_brands  Effectiveness  Availability      Other   \n",
+       "count                                   92            68         42   \n",
+       "\n",
+       "                                           5             6          7   \\\n",
+       "City                                Bangalore     Bangalore  Bangalore   \n",
+       "Reasons_for_choosing_brands  Brand reputation  Availability      Other   \n",
+       "count                                     679           646        570   \n",
+       "\n",
+       "                                                  8              9   ...  \\\n",
+       "City                                       Bangalore      Bangalore  ...   \n",
+       "Reasons_for_choosing_brands  Taste/flavor preference  Effectiveness  ...   \n",
+       "count                                            531            402  ...   \n",
+       "\n",
+       "                                           40                       41  \\\n",
+       "City                                   Mumbai                   Mumbai   \n",
+       "Reasons_for_choosing_brands  Brand reputation  Taste/flavor preference   \n",
+       "count                                     443                      362   \n",
+       "\n",
+       "                                        42            43      44  \\\n",
+       "City                                Mumbai        Mumbai  Mumbai   \n",
+       "Reasons_for_choosing_brands  Effectiveness  Availability   Other   \n",
+       "count                                  331           200     174   \n",
+       "\n",
+       "                                           45                       46  \\\n",
+       "City                                     Pune                     Pune   \n",
+       "Reasons_for_choosing_brands  Brand reputation  Taste/flavor preference   \n",
+       "count                                     264                      209   \n",
+       "\n",
+       "                                        47            48     49  \n",
+       "City                                  Pune          Pune   Pune  \n",
+       "Reasons_for_choosing_brands  Effectiveness  Availability  Other  \n",
+       "count                                  174           157    102  \n",
+       "\n",
+       "[3 rows x 50 columns]"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('City')['Reasons_for_choosing_brands'].value_counts().reset_index().T"
    ]
   },
   {
@@ -5085,9 +5292,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "'Taste_experience','Brand_perception','Reasons_for_choosing_brands'"
-   ]
+   "source": []
   }
  ],
  "metadata": {
