--- a/codes.ipynb
+++ b/codes.ipynb
@@ -5082,6 +5082,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cities we need to focus based on availability"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 111,
    "metadata": {},
@@ -5109,7 +5116,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City       Reasons_for_choosing_brands\n",
+       "Ahmedabad  Brand reputation               135\n",
+       "           Taste/flavor preference        119\n",
+       "           Effectiveness                   92\n",
+       "           Availability                    68\n",
+       "           Other                           42\n",
+       "Bangalore  Brand reputation               679\n",
+       "           Availability                   646\n",
+       "           Other                          570\n",
+       "           Taste/flavor preference        531\n",
+       "           Effectiveness                  402\n",
+       "Chennai    Brand reputation               235\n",
+       "           Availability                   208\n",
+       "           Other                          194\n",
+       "           Effectiveness                  153\n",
+       "           Taste/flavor preference        147\n",
+       "Delhi      Brand reputation               132\n",
+       "           Effectiveness                   86\n",
+       "           Taste/flavor preference         84\n",
+       "           Availability                    79\n",
+       "           Other                           48\n",
+       "Hyderabad  Brand reputation               473\n",
+       "           Other                          371\n",
+       "           Availability                   353\n",
+       "           Taste/flavor preference        328\n",
+       "           Effectiveness                  308\n",
+       "Jaipur     Brand reputation               108\n",
+       "           Taste/flavor preference         78\n",
+       "           Effectiveness                   74\n",
+       "           Availability                    58\n",
+       "           Other                           42\n",
+       "Kolkata    Brand reputation               134\n",
+       "           Other                          123\n",
+       "           Availability                   119\n",
+       "           Taste/flavor preference        101\n",
+       "           Effectiveness                   89\n",
+       "Lucknow    Taste/flavor preference         52\n",
+       "           Brand reputation                49\n",
+       "           Effectiveness                   39\n",
+       "           Availability                    22\n",
+       "           Other                           13\n",
+       "Mumbai     Brand reputation               443\n",
+       "           Taste/flavor preference        362\n",
+       "           Effectiveness                  331\n",
+       "           Availability                   200\n",
+       "           Other                          174\n",
+       "Pune       Brand reputation               264\n",
+       "           Taste/flavor preference        209\n",
+       "           Effectiveness                  174\n",
+       "           Availability                   157\n",
+       "           Other                          102\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('City')['Reasons_for_choosing_brands'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -5497,84 +5575,13 @@
        "49       Pune                       Other    102"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.groupby('City')['Reasons_for_choosing_brands'].value_counts().reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "City       Reasons_for_choosing_brands\n",
-       "Ahmedabad  Brand reputation               135\n",
-       "           Taste/flavor preference        119\n",
-       "           Effectiveness                   92\n",
-       "           Availability                    68\n",
-       "           Other                           42\n",
-       "Bangalore  Brand reputation               679\n",
-       "           Availability                   646\n",
-       "           Other                          570\n",
-       "           Taste/flavor preference        531\n",
-       "           Effectiveness                  402\n",
-       "Chennai    Brand reputation               235\n",
-       "           Availability                   208\n",
-       "           Other                          194\n",
-       "           Effectiveness                  153\n",
-       "           Taste/flavor preference        147\n",
-       "Delhi      Brand reputation               132\n",
-       "           Effectiveness                   86\n",
-       "           Taste/flavor preference         84\n",
-       "           Availability                    79\n",
-       "           Other                           48\n",
-       "Hyderabad  Brand reputation               473\n",
-       "           Other                          371\n",
-       "           Availability                   353\n",
-       "           Taste/flavor preference        328\n",
-       "           Effectiveness                  308\n",
-       "Jaipur     Brand reputation               108\n",
-       "           Taste/flavor preference         78\n",
-       "           Effectiveness                   74\n",
-       "           Availability                    58\n",
-       "           Other                           42\n",
-       "Kolkata    Brand reputation               134\n",
-       "           Other                          123\n",
-       "           Availability                   119\n",
-       "           Taste/flavor preference        101\n",
-       "           Effectiveness                   89\n",
-       "Lucknow    Taste/flavor preference         52\n",
-       "           Brand reputation                49\n",
-       "           Effectiveness                   39\n",
-       "           Availability                    22\n",
-       "           Other                           13\n",
-       "Mumbai     Brand reputation               443\n",
-       "           Taste/flavor preference        362\n",
-       "           Effectiveness                  331\n",
-       "           Availability                   200\n",
-       "           Other                          174\n",
-       "Pune       Brand reputation               264\n",
-       "           Taste/flavor preference        209\n",
-       "           Effectiveness                  174\n",
-       "           Availability                   157\n",
-       "           Other                          102\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.groupby('City')['Reasons_for_choosing_brands'].value_counts()"
    ]
   },
   {
