--- a/codes.ipynb
+++ b/codes.ipynb
@@ -5058,7 +5058,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Focus more on how to increase the overall rating for the test of our product"
+    "### Focus more on how to increase the overall rating for the test of our product but it is not something that we need to do urgently"
    ]
   },
   {
@@ -5783,6 +5783,29 @@
    ],
    "source": [
     "df['Reasons_for_choosing_brands'].value_counts().plot(kind='pie',autopct='%1.1f%%',ylabel='')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Secondary Insights (Sample Sections / Questions)\n",
+    "\n",
+    "Note: You need to do additional market research\n",
+    "\n",
+    "Recommendations for CodeX:\n",
+    "\n",
+    "Give 5 recommendations for CodeX (below are some samples)\n",
+    "\n",
+    "● What immediate improvements can we bring to the product?\n",
+    "\n",
+    "● What should be the ideal price of our product?\n",
+    "\n",
+    "● What kind of marketing campaigns, offers, and discounts we can run?\n",
+    "\n",
+    "● Who can be a brand ambassador, and why?\n",
+    "\n",
+    "● Who should be our target audience, and why"
    ]
   },
   {
